# middleman

./: CMakeLists.txt  Makefile  compile_commands.json  vcpkg.json
config/: dis_pdus_scaffold.json  dis_types.json  mm_config.json  test.rules  test_rules.json  test_rules2.json
include/mm/: config_reader.hpp
include/mm/mutators/: json_rule_based_mutator.hpp  packet_mutator.hpp  test_mutator.hpp
include/mm/network/: middleman_proxy.hpp  udp_transport.hpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  connection_widget.cpp  connection_widget.hpp  gpt.cpp  main.cpp  rules_editor_widget.cpp  rules_editor_widget.hpp  schema_editor.cpp  schema_editor.hpp  udp_viewer_widget.cpp  udp_viewer_widget.hpp
src/mutators/: json_rule_based_mutator.cpp  test_mutator.cpp
src/network/: middleman_proxy.cpp  udp_transport.cpp
test/: entity_state.pdu  send_entity_state.sh
tools/: build.sh  clean.sh  configure.sh  deps.sh  environment.sh  install.sh  package.sh
